bugfix/align dashboard page

--- a/src/components/Dashboard/DashboardContent/DashboardContent.scss
+++ b/src/components/Dashboard/DashboardContent/DashboardContent.scss
@@ -1,8 +1,9 @@
 @import "src/styles/utils";
 
 .DashboardContent-wrapper {
-	@include page-wrapper;
-
+	margin-left: 0;
+	margin-right: 0;
+	margin-top: 30px;
 	margin-bottom: 50px;
 	height: fit-content;
 	$linkWrapperHeight: 330px;
